--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
+
+/* Estilos generales */
+section {
+  display: flex; /* d-flex */
+  flex-direction: column; /* flex-column */
+  align-items: center; /* align-items-center */
+  justify-content: center; /* justify-content-center */
+}
+
+h1 {
+  font-family: 'Rubik Dirt', cursive;
+  font-size: 2.5rem;
+}
+
+
+
 /* Barra de navegación */
 
 .navbar {
@@ -11,7 +28,29 @@
 }
 
 
+/* Seccion Hero */
 
+.hero {
+  background-color: #f5f6f7;
+  min-height: 450px;
+  text-align: center;
+}
+
+.hero-principal {
+  padding: 3rem;
+}
+
+.hero-imagen-desarrollador {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px; /*rounded-circle*/
+  margin: 20px;
+}
+
+.hero-principal h2 {
+  font-size: 1.5rem;
+  color: #615151;
+}
 
 
 
@@ -22,4 +61,11 @@
   .nav-brand {
     display: none;
   }
+}
+
+@media screen and (min-width: 700px) {
+  .hero-inferior-imagen {
+    max-width: 600px;
+  }
+
 }
