--- a/style.css
+++ b/style.css
@@ -13,10 +13,23 @@ h1 {
   font-size: 2.5rem;
 }
 
+.seccion-oscura {
+  color: #fff;
+  background-color: #1b1b32;
+}
+
+.seccion-titulo {
+  font-family: 'Rubik Dirt', cursive;
+  font-size: 2rem;
+  padding: 15px 0;
+}
+
+.seccion-texto {
+  font-size: 1.2rem;
+}
 
 
 /* Barra de navegación */
-
 .navbar {
   padding: 2rem;
   background-color: #f5f6f7;
@@ -28,8 +41,7 @@ h1 {
 }
 
 
-/* Seccion Hero */
-
+/* Sección Hero */
 .hero {
   background-color: #f5f6f7;
   min-height: 450px;
@@ -53,10 +65,21 @@ h1 {
 }
 
 
+/* Sección sobre mi */
+.sobre-mi  {
+  height: 500px;
+  padding: 10px;
+}
+
+.sobre-mi .contenedor {
+  max-width: 600px;
+  text-align: center;
+}
+
+
 
 
 /* Adaptable responsivo */
-
 @media screen and (max-width: 767px) {
   .nav-brand {
     display: none;
