--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Share+Tech+Mono&display=swap');
 
-/* Estilos generales */
+/** Estilos generales */
 section {
   display: flex; /* d-flex */
   flex-direction: column; /* flex-column */
@@ -54,7 +55,7 @@ h1 {
 }
 
 
-/* Barra de navegación */
+/** Barra de navegación */
 .navbar {
   padding: 2rem;
   background-color: #f5f6f7;
@@ -66,7 +67,7 @@ h1 {
 }
 
 
-/* Sección Hero */
+/** Sección Hero */
 .hero {
   background-color: #f5f6f7;
   min-height: 450px;
@@ -90,7 +91,7 @@ h1 {
 }
 
 
-/* Sección sobre mi */
+/** Sección sobre mi */
 .sobre-mi  {
   height: 500px;
   padding: 10px;
@@ -102,7 +103,7 @@ h1 {
 }
 
 
-/* Seccin experiencia */
+/** Seccion experiencia */
 .experiencia {
   padding: 40px 40px 60px 40px;
 }
@@ -154,7 +155,7 @@ h1 {
 }
 
 
-/* Seccion proyectos */
+/** Seccion proyectos */
 .proyectos-recientes {
   padding: 40px;
 }
@@ -212,6 +213,60 @@ h1 {
 }
 
 
+/** Serccion testimonios */
+.testimonios {
+  padding: 40px 40px 80px 40px;
+}
+
+.testimonios .carousel {
+  max-width: 800px;
+}
+
+.testimonios .carousel-item {
+  height: 500px;
+}
+
+.testimonios .carousel-item .container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.testimonios .carousel-item .testimonio-imagen {
+  height: 150px;
+  width: 150px;
+  margin: 10px 10px 20px 10px;
+}
+
+.testimonios .carousel-item .testimonio-texto {
+  max-width: 70%;
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Share Tech Mono', monospace;
+}
+
+.testimonios .carousel-item .testimonio-info {
+  font-weight: bold;
+  text-align: center;
+}
+
+.testimonios .carousel-item .testimonio-info p {
+  margin-bottom: 0;
+}
+
+.testimonios .carousel-item .testimonio-info .cliente {
+  font-size: 1.2rem;
+}
+
+.testimonios .carousel-item .testimonio-info .cargo {
+  font-size: 0.9rem;
+  color: #656060;
+}
+
+
 
 
 
@@ -237,4 +292,16 @@ h1 {
     .proyecto .overlay .iconos-contenedor i {
       font-size: 40px;
     }
+}
+
+@media screen and (max-width: 800px) {
+  .testimonios .carousel-item .testimonio-imagen {
+    height: 120px;
+    width: 120px;
+  }
+
+  .testimonios .carousel-item .testimonio-texto {
+    font-size: 16px;
+  }
+
 }
