--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
 /** Estilos generales */
 section {
@@ -311,6 +312,61 @@ h1 {
 .contacto button i {
   font-size: 1.3rem;
 }
+
+
+/** Serccion pie de página */
+footer {
+  min-height: 500px;
+}
+
+.footer-logo {
+  height: 80px;
+  width: 80px;
+  margin: 10px;
+}
+
+.footer-texto {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.5rem;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+
+.iconos-redes-sociales i {
+  color: #fff;
+  font-size: 1.5rem;
+  transition: all 0.2s ease-in;
+}
+
+.iconos-redes-sociales a{
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  padding: 2px;
+  margin: 10px;
+  transition: all 0.2s ease-in;
+}
+
+.iconos-redes-sociales a:hover {
+  background-color: #fff;
+  border: 2px solid #0d6efd;
+}
+
+.iconos-redes-sociales a:hover i {
+  color: #000;
+}
+
+.derechos-de-autor {
+  color: #aeaeae;
+  font-size: 15px;
+  padding: 20px;
+}
+
+
 
 
 
